# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16x8EgAhaVN2oH5noKmap7qaDoINobBpBa4qk8PDuhreZA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1SsUmXcEz6B5LTSVyH-X1geyMJyKUPx7UPz-GAhSIsTw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1YxRhjZST6Oxw0L9HyI2wAidQckEwr3pY5-tybdhm_rg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xg3xcaxGbqhdQ0qr5Sa-ArMehgQ9I_-g58tu2hQCcY4s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1Ss5Vo0fQea_9z3iamK8WXlTMpziLiZnSAI3ZhD2UX14=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1xlfAKPIpgnqevFLO0ofQ46DaT-s9Ymwwqgtsnq0DBrg=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1huaA5Kyx9kBrXB51ZBdO-N_jRxAJyffjKzB8FBpVBMM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT24y0TLNeg5yD8X9P6ujFRRsm20dr5k2defCeYhgI-LNM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2CP-Rq_mT40FeJGBTCgqUvdjAdGtlpyCVBFhxjcPVIHY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2GnD31JIIWybv59s0cqs2Q1TMh5RpV7Tx95Ev8eiI0Cc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2JCULWU65fyEsz59AioEcZ6j-k_0cKaZ0Nx1MlsbrWco=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2QlYiBbvjbk6FQYkHqPKvzsnFDhOIUl6zJ3ehhEkWKfs=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT11mkq4CR3Drph4nIVx6UQUSGNXQURX5gTpjeXMmQzlfA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1OM-adanf5TLKTnS9i6jBURrwY3rZ8QlEqVgGhQdfNUE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1QwN-rFOrF5pgFTwufYdlqLUOpxd118lD4HSSuCWuxME=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1XReRW1ghrlnxPqamAx09PozvJXdIy0-QxoeKKjBNsRc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1bDwpuRXE--VX7qIPANXjG-6MeBEb50RAAwNU-3W8KDI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1lopxuzYDW44wgmzUm7G0ScAlvxbT05Q3LOgCftpp-zc=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1q8OMZRHhpRWQVxeDYrz5NBjCkRdOMvzbl8_597gY__4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64BVoJdncM4miV8PFa-_6KjF21aWXKbXOWrJsVCEZSlVo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64GRO-q7cCeh8jnCuZkztQNntkEd5NYTHuVcauIwo5h6U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x12zo7aMA_tcSYCfd0ldkltjnVkCIxMsfcWlN_mqKMvQA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1Fjk_rDo_ccL863RYu9pDjI5_tNPloQsA8jgYF2SuLoQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1I6QR86odN7HZcCU783Ye_APqV2flwWtWJqRhAdZu4mY=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2lDrzYg-JfRlnaPAgI-6noezZsm4IMixgXsbA9Hk56_Q=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2svTdX8pQt1NAr4hzLhE5IPy-WDksc7S_ewkFxRMcHT8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT38nHzhYyEQEf9alUQSJFgo6V7rc5d2d9DipX5m6leXGE=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32IhbveXJH8LSrPFwecFkyMMRz8-_ZzPHiMNhCDj5W1go=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32pAEkCh0TpxdeVMXANJbPuKb1OFu5a3Zozykrg_6M8Gs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32q3BJXIe4E61by_wRQDlgEnFCtWGmEnH0OUyrVjK5sMY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI323cXmOcgwYRqPIqEvz3uzXjuxKEKP9KTfDYZiw8JPXIc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xKVCJJaqfLg1Ja3g70gNYVvd5DWDiShFM-K1cSBSnYx0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xp4kCipVGCbRNevSz6ORLyupWAh4p58jC0ckNuVX5RWY=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT10PiAcX6D4LidkCDsfM8GQ56i41c0yKpvvVbC6mMs0as=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT158WNzjYl0ILzRSS1q7M9dYhDKz-3ox-4Ug9H7atHqcA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1A7WyLzBL91AL7gZMU6TwckW-nmiEFUOjMtD8DzSr7No=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1REPk0rm1fDTcrs7DWyr1vv5HlAfj7YdeIU-16D0xyUk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1ZruxHTFFdcOTso2oH5P_v2cIuddKdRdEkuX7_5F1RvA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1bOA7HrPB5-pS9QA5s5Hzh6wSyzGqPM0gBEX4su_PnRY=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1MD_Vxh_GltXlpa7gDLsQtdgr-o2WtIIA99gazHoLyUQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1TvMTH_mbUS77X57jDdJRkgyXosk12FNl_LW1djZJTt8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT306bt6w4bzkQi24udpNRBL4tYNR8qhS3sXVpPtBEkU_U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3eg7792NpWYXwByy3Gvw-FMS4H39WThflGc-NG6YI11Q=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4VdTsMVdmywXK8mMMtPgDl32hFsEcIy8627X3D4PNiOs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4aSiW0w7pdO-esG0cIhCroTo862cWPAN0nuFxV2B3t-E=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16MM2QxxU3cscAwOYhvdnai4QEtRzziwph599He7l_DmQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16uCoX5y3bsrLmjUWY_i4ZgQ-_C0KnRnbvED5og2Ahs4w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16YQBe6t8fOccpoD_mvGC7W3sHQ2O8sdrszRBhCTw7P6I=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x167RSYUlqfgMpYQWI_3zBT7oVev4SevGuoNdi3KCqVqrY=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16B5OOpw2DaR-XWyCr4o7cufqu5PEoXlpBbq-8rv1F0NE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16kodYnEbiqQFfIvfhboLNeUEum4XGdqvgCh2KDQ-6oR0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16ArTVW_tMs8pb3W54nf4gWKxD02EceX5smG8Iy8Z1x60=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16XgaKciqNQlMO3ufihh_9MfzerlV2DqVpEvd81RVchGA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16pge1O5qgtlB8frdCZ36rxwaOFpK1JGhMtts3jZ9UC_8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16vIXDSKU8YGZNcWe0gUYHEmbAoKqzk853Id9iD4NBU7s=',
      'err': 0,
    }),
  ])
# ---
